Document campaigns apis then test as well
